# dune-deps

./: .gitignore  CHANGES.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  dune  dune-deps.opam  dune-project  pull_request_template.md
.circleci/: config.yml  opam-switches  run-test  setup
.deps/: deps.dot
.github/workflows/: dune-deps.yml
src/: Dot.ml  Dune.ml  Find.ml  Graph.ml  Main.ml  README.md  dune
src/lib/: Compat.ml  Dep_graph.ml  Disambiguate.ml  Disambiguate.mli  Dot.ml  Dune.ml  Dune.mli  Filter.ml  Filter.mli  Filterable.ml  Filterable.mli  Find.ml  Graph.ml  dune
src/test/: Disambiguate.ml  dune  test.ml
test/: .gitignore  Makefile  README.md  dune  proj-deps.dot.expected  proj-no-exe.dot.expected  proj-no-ext.dot.expected  proj.dot.expected
test/extra-proj/: dune
test/extra-proj/exclude-me/: dune
test/proj/: dune
test/proj/_build/: dune
test/proj/empty/: dune
test/proj/foo/test/: dune
test/proj/more/: dune
test/proj/with-subdir/: dune
