opam-version: "2.0"
maintainer: "martin@mjambon.com"
authors: ["Martin Jambon"]
homepage: "https://github.com/mjambon/dune-deps"
bug-reports: "https://github.com/mjambon/dune-deps/issues"
dev-repo: "https://github.com/mjambon/dune-deps.git"

build: [
  ["dune" "build" "-p" name "-j" jobs]
]

test: [
  [make "test"]
]

install: [
  [make "install"]
]

depends: [
  "dune" {>= "1.6"}
  "ocaml"
  "sexplib"
]
